styles/styles.css
/* ... */
body {
  display: none;
  margin: 0;
  background-color: var(--background-color);
  color: var(--text-color);
  font-family: var(--body-font-family);
  font-size: var(--body-font-size-m);
  line-height: 1.6;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
}

body.appear {
  display: block;
  overflow-x: hidden;
}
body.gray-theme {
  filter: grayscale(100%);
}


body.red-theme {
  --main-accent-color: #DC2626;
  --link-hover-color: #EF4444;
}

body.blue-theme {
  --main-accent-color: #2563EB;   /* Modern Bright Blue */
  --link-hover-color: #3B82F6;    /* Lighter Sky Blue */
}

body.green-theme {
  --main-accent-color: #059669;   /* Fresh Emerald */
  --link-hover-color: #10B981;    /* Lighter Mint Green */
}

.wehealthcare-theme {
  --main-accent-color: #00c4ff;
  --nav-text-color:#000000;
}
/*brand header footer brand themes*/
body header .nav-wrapper{
  background-color: var(--nav-background-color);
  color: var(--nav-text-color);
}
body footer {
  background-color: var(--footer-background-color);
  color: var(--footer-text-color);
}
/*theme header-footer*/
body.red-theme header .nav-wrapper,
body.red-theme footer {
  background-color: var(--main-accent-color);
  color: var(--text-light);
}

body.blue-theme header .nav-wrapper,
body.blue-theme footer {
  background-color: var(--main-accent-color);
  color: var(--text-light);
}
body.green-theme header .nav-wrapper,
body.green-theme footer {
  background-color: var(--main-accent-color);
  color: var(--text-light);
}

body.red-theme header .nav-wrapper nav .nav-sections ul > li > a::before{
  background: var(--text-light);
}
body.red-theme header .nav-wrapper nav .nav-sections ul > li > a:hover{
  color: var(--text-light);
}
body.green-theme header .nav-wrapper nav .nav-sections ul > li > a::before{
  background: var(--text-light);
}
body.green-theme header .nav-wrapper nav .nav-sections ul > li > a:hover{
  color: var(--text-light);
}
body.blue-theme header .nav-wrapper nav .nav-sections ul > li > a::before{
  background: var(--text-light);
}
body.blue-theme header .nav-wrapper nav .nav-sections ul > li > a:hover{
  color: var(--text-light);
}
/*theme header-footer*/
header {
  height: var(--nav-height);
  min-height: 90px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 111;
}

header .header,
footer .footer {
  visibility: hidden;
}

header .header[data-block-status="loaded"],
footer .footer[data-block-status="loaded"] {
  visibility: visible;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0.8em;
  margin-bottom: 0.25em;
  font-family: var(--heading-font-family);
  font-weight: 700;
  line-height: 1.25;
  scroll-margin: 40px;
}

main h2 {
  display: inline-block;
  padding-bottom: 0.3em;
  border-bottom: 3px solid var(--main-accent-color);
}

h1 {
  font-size: var(--heading-font-size-xxl);
}

h2 {
  font-size: var(--heading-font-size-xl);
}

h3 {
  font-size: var(--heading-font-size-l);
}

h4 {
  font-size: var(--heading-font-size-m);
}

h5 {
  font-size: var(--heading-font-size-s);
}

h6 {
  font-size: var(--heading-font-size-xs);
}

p,
dl,
ol,
ul,
pre,
blockquote {
  margin-top: 0.8em;
  margin-bottom: 0.25em;
}

code,
pre {
  font-size: var(--body-font-size-s);
}

pre {
  padding: 16px;
  border-radius: 8px;
  background-color: var(--light-color);
  overflow-x: auto;
  white-space: pre;
}

main > div {
  margin: 40px 16px;
}

input,
textarea,
select,
button {
  font: inherit;
}

/* links */
/* buttons */
a, a:any-link, a.button:any-link,
button {
  display: inline-block;
  padding: 0;
  background-color: transparent;
  color: var(--link-color);
  text-decoration: none;
  outline: none;
  border: none;
  border-radius: 0;
  font-size: 16px;
  font-family: var(--heading-font-family);
  line-height: 20px;
  font-weight: 500;
  text-align: left;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  text-decoration: none;
}
a::after, a.button::after {
  font-family: 'Font Awesome 5 Solid';
  content: "\f105";
  color: var(--link-color);
  font-size: 16px;
  font-weight: 100;
  width: 15px;
  height: 20px;
  float: right;
  margin-left: 0;
  margin-top: 0;
  border: none;
  border-radius: 0;
  padding: 1px 10px;
  cursor: pointer;
}
a:hover,
a:focus,
a.button:hover,
a.button:focus {
  color: var(--link-hover-color);
  text-decoration: underline;
  cursor: pointer;
}
a:hover::after,
a:focus::after,
a.button:hover::after,
a.button:focus::after {
  color: var(--link-hover-color);
}

button:disabled,
button:disabled:hover {
  color: var(--text-disabled);
  cursor: unset;
}
button:disabled::after,
button:disabled:hover::after {
  color: var(--text-disabled);
  cursor: unset;
}

a.button.secondary,
button.secondary {
  background-color: unset;
  border: 2px solid currentcolor;
  color: var(--text-color);
}

main img {
  max-width: 100%;
  width: auto;
  height: auto;
}

.icon {
  display: inline-block;
  height: 24px;
  width: 24px;
}

.icon img {
  height: 100%;
  width: 100%;
}



/* Image Hover Effect Shine - start */
main picture {
  display: block;
	position: relative;
  overflow: hidden;
}
main picture::before {
	position: absolute;
	top: 0;
	left: -75%;
	z-index: 111;
	display: block;
	content: '';
	width: 50%;
	height: 100%;
	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
	-webkit-transform: skewX(-25deg);
	transform: skewX(-25deg);
}
main picture:hover::before {
	-webkit-animation: shine .75s;
	animation: shine .75s;
}
@-webkit-keyframes shine {
	100% {
		left: 125%;
	}
}
@keyframes shine {
	100% {
		left: 125%;
	}
}
/* Image Hover Effect Shine - end */






/* Parallax effect - Start */

main .cards-container {
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
}
.adobe-ue-edit header, .adobe-ue-preview header {
  position: initial;
}
/* ... */

